--- a/views/about.html
+++ b/views/about.html
@@ -9,5 +9,7 @@
 <body>
     <h1>About</h1>
     <p>This is about page!</p>
+    <a href="/">Home Page</a>
+    <a href="/about">About Page</a>
 </body>
 </html>
