--- a/views/index.html
+++ b/views/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Hello, World!</h1>
     <p>Hello World!</p>
+    <a href="/">Home Page</a>
+    <a href="/about">About Page</a>
 </body>
 </html>
